# duckdb-lake-formation

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: CloudTesting.yml  MainDistributionPipeline.yml
docs/community-extensions/lake_formation/: description.yml
src/: lake_formation_extension.cpp
src/include/: lake_formation_extension.hpp
src/include/lakeformation/: lake_formation_provider.hpp  lf_client.hpp  lf_credential_cache.hpp  lf_table_metadata.hpp
src/lakeformation/: lake_formation_provider.cpp  lf_client.cpp  lf_credential_cache.cpp  lf_credentials.cpp  lf_filter_parser.cpp  lf_table_metadata.cpp
test/sql/lakeformation/: lf_cloud_setup.inc  test_lf_bypass_attempt.test  test_lf_column_filter_rejected.test  test_lf_no_filter_grant.test  test_lf_row_filter_partitioned.test  test_lf_row_filter_unpartitioned.test
